# MCP-Salesforce

./: CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml  todo.md
.github/workflows/: publish.yml  test.yml
src/salesforce/: __init__.py  server.py
src/salesforce/tests/: test_server.py
tests/: test_server.py
