[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-salesforce-connector"
version = "0.1.13"
description = "A Model Context Protocol (MCP) server implementation for Salesforce integration"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "llm", "salesforce"]
dependencies = [
    "mcp",
    "simple-salesforce",
    "python-dotenv",
]
license = { text = "MIT" }
authors = [
    { name = "Suman G", email = "suman.gunaganti@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/smn2gnt/MCP-Salesforce"

[project.scripts]
salesforce = "src.salesforce:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
